Blob events config

--- a/AlloyTechAzure/EPiServerFramework.config
+++ b/AlloyTechAzure/EPiServerFramework.config
@@ -21,5 +21,17 @@
     <clear />
     <add name="ProtectedAddons" virtualPath="~/EPiServer/" physicalPath="[appDataPath]\Modules" type="EPiServer.Web.Hosting.VirtualPathNonUnifiedProvider, EPiServer.Framework" />
   </virtualPathProviders>
+  <blob defaultProvider="azureblobs">
+    <providers>
+      <add name="azureblobs" type="EPiServer.Azure.Blobs.AzureBlobProvider,EPiServer.Azure"
+      connectionStringName="EPiServerAzureBlobs" container="mysitemedia"/>
+    </providers>
+  </blob>
+  <event defaultProvider="azureevents">
+    <providers>
+      <add name="azureevents" type="EPiServer.Azure.Events.AzureEventProvider,EPiServer.Azure"
+      connectionStringName="EPiServerAzureEvents" topic="MySiteEvents"/>
+    </providers>
+  </event>
   <appData basePath="..\AppData" />
 </episerver.framework>
