--- a/.gitignore
+++ b/.gitignore
@@ -87,7 +87,8 @@ publish
 *.Publish.xml
 
 # NuGet Packages Directory
-packages
+packages/*
+!packages/repositories.config
 
 # Windows Azure Build Output
 csx
