--- a/.nuget/NuGet.targets
+++ b/.nuget/NuGet.targets
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
-      <PackageSources>"http://nuget.episerver.com/feed/packages.svc/"</PackageSources>
+      <PackageSources>http://nuget.episerver.com/feed/packages.svc/</PackageSources>
         <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">$(MSBuildProjectDirectory)\..\</SolutionDir>
 
         <!-- Enable the restore command to run before builds -->
@@ -22,7 +22,7 @@
         <!-- The official NuGet package source (https://www.nuget.org/api/v2/) will be excluded if package sources are specified and it does not appear in the list -->
         <!--
             <PackageSource Include="https://www.nuget.org/api/v2/" />
-            <PackageSource Include="https://my-nuget-source/nuget/" />
+            <PackageSource Include="http://nuget.episerver.com/feed/packages.svc/" />
         -->
     </ItemGroup>
 
