Installing EPiServer.CMS.UI* nuget packages for version 7.6.0.0

--- a/AlloyTechAzure/Web.Config
+++ b/AlloyTechAzure/Web.Config
@@ -2,7 +2,7 @@
 <configuration>
   <configSections>
     <section name="workflowRuntime" type="System.Workflow.Runtime.Configuration.WorkflowRuntimeSection, System.Workflow.Runtime, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-    <section name="episerver" type="EPiServer.Configuration.EPiServerSection, EPiServer.Configuration, Version=7.5.394.2, Culture=neutral, PublicKeyToken=8fe83dea738b45b7" restartOnExternalChanges="true" />
+    <section name="episerver" type="EPiServer.Configuration.EPiServerSection, EPiServer.Configuration, Version=7.5.1003.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7" restartOnExternalChanges="true" />
     <section name="episerver.baseLibrary" allowDefinition="MachineToApplication" allowLocation="false" type="EPiServer.BaseLibrary.ConfigurationHandler,EPiServer.BaseLibrary" />
     <sectionGroup name="episerverModules"></sectionGroup>
     <section name="episerver.shell" type="EPiServer.Shell.Configuration.EPiServerShellSection, EPiServer.Shell" />
@@ -110,7 +110,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-7.65535.65535.65535" newVersion="7.5.394.2" />
+        <bindingRedirect oldVersion="0.0.0.0-7.6.0.0" newVersion="7.6.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Web.WebControls" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
@@ -137,7 +137,7 @@
         <assemblyIdentity name="Microsoft.WindowsAzure.Storage" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.1.0.4" newVersion="2.1.0.4" />
       </dependentAssembly>
-    </assemblyBinding>
+    <dependentAssembly><assemblyIdentity name="CMS" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" /></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Cms.Shell.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-7.6.0.0" newVersion="7.6.0.0" /></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Shell.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-7.6.0.0" newVersion="7.6.0.0" /></dependentAssembly><dependentAssembly><assemblyIdentity name="Shell" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" /></dependentAssembly></assemblyBinding>
   </runtime>
   <!-- Connection string info is stored in a separate file -->
   <connectionStrings configSource="connectionStrings.config" />
@@ -377,7 +377,7 @@
   <episerver.framework configSource="EPiServerFramework.config" />
   <episerver.shell>
     <publicModules rootPath="~/modules/" autoDiscovery="Modules" />
-    <protectedModules rootPath="~/EPiServer/"></protectedModules>
+    <protectedModules rootPath="~/EPiServer/"><add name="Shell" /><add name="CMS" /></protectedModules>
   </episerver.shell>
   <episerver.search active="true">
     <namedIndexingServices defaultService="serviceName">
