--- a/AlloyTechAzure/packages.config
+++ b/AlloyTechAzure/packages.config
@@ -2,9 +2,12 @@
 <packages>
   <package id="Castle.Core" version="3.2.2" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" />
+  <package id="DotNetZip" version="1.9.1.8" targetFramework="net40" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
   <package id="EPiServer.Azure" version="7.5.1003.0" targetFramework="net40" />
   <package id="EPiServer.CMS.Core" version="7.5.1003.0" targetFramework="net40" />
+  <package id="EPiServer.CMS.UI" version="7.6.0" targetFramework="net40" />
+  <package id="EPiServer.CMS.UI.Core" version="7.6.0" targetFramework="net40" />
   <package id="EPiServer.Framework" version="7.5.1003.0" targetFramework="net40" />
   <package id="log4net" version="1.2.10" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
