--- a/AlloyTechAzure/EPiServerLog.config
+++ b/AlloyTechAzure/EPiServerLog.config
@@ -7,7 +7,7 @@
         <staticLogFileName value="true"/>
         <datePattern value=".yyyyMMdd.'log'" />
         <rollingStyle value="Date" />
-        <threshold value="Error" />
+        <threshold value="Warn" />
         <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
         <appendToFile value="true" />
         <layout type="log4net.Layout.PatternLayout">
@@ -39,7 +39,7 @@
 
     <root>
         <!--Be careful, setting this value to All, Debug or Info will affect performance.-->
-        <level value="Error" />
+        <level value="Warn" />
 
         <!--Enabled file logging-->
         <appender-ref ref="errorFileLogAppender" />
