--- a/AlloyTechAzure/EPiServerLog.config
+++ b/AlloyTechAzure/EPiServerLog.config
@@ -2,12 +2,12 @@
 <log4net>
     <appender name="errorFileLogAppender" type="log4net.Appender.RollingFileAppender" >
         <!-- Consider moving the log files to a location outside the web application -->
-        <file value="App_Data\EPiServerErrors.log" />
+        <file value="..\..\LogFiles\EPiServerErrors.log" />
         <encoding value="utf-8" />
         <staticLogFileName value="true"/>
         <datePattern value=".yyyyMMdd.'log'" />
         <rollingStyle value="Date" />
-        <threshold value="Warn" />
+        <threshold value="Info" />
         <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
         <appendToFile value="true" />
         <layout type="log4net.Layout.PatternLayout">
@@ -39,7 +39,7 @@
 
     <root>
         <!--Be careful, setting this value to All, Debug or Info will affect performance.-->
-        <level value="Warn" />
+        <level value="Info" />
 
         <!--Enabled file logging-->
         <appender-ref ref="errorFileLogAppender" />
